# wombat

./: .gitignore  CMakeLists.txt  README.md  main.cpp
debug/: .gdbinit
examples/: fn.wo  hello_world.wo  loops.wo  main.wo  sock.wo  test.wo
lang/: const.wo  fn.wo  hello_world.wo  if.wo  loops.wo  scope.wo  sock.wo  test.wo
lang/future/: array.wo  closures.wo
lang/tests/: foo.wo  foo.wombat.il  home.asm  home.wo  home.wombat.il  test.wo  test.wombat.il  wombat.wo  wombat.wombat.il
lang/tests/branching/: branch.wo  branch.wombat.il
lang/tests/expr/: eval.wo
lang/tests/func/: func.wo
lang/tests/hello/: hello.wo  hello.wombat.il
lang/tests/if_else/: if_else.wo  if_else.wombat.il
lang/tests/loop/: loop.wo  loop.wombat.il
lang/tests/ptr/: ptr.wo  ptr.wombat.il
lang/tests/wombat_bin/: wombat.asm
scripts/: build.sh  debug.sh  wombat.sh
src/: main.cpp
src/compiler/: compiler.cpp  compiler.h
src/compiler/ast/: ast.hpp  node.hpp  pp_visitor.cpp  pp_visitor.hpp  visit.cpp  visit.hpp
src/compiler/codegen/: asm.hpp  emit.cpp  gen.cpp  gen.hpp  gen_inst.cpp  gen_math.cpp
src/compiler/core/: builtins.cpp  builtins.hpp  compiler.cpp  compiler.hpp  ctxt.hpp  typing.cpp  typing.hpp
src/compiler/diagnostics/: diagnostic.cpp  diagnostic.hpp
src/compiler/errors/: diag.cpp  diag.hpp  err.hpp
src/compiler/ir/: ir.cpp  ir.hpp  structs.cpp  structs.hpp
src/compiler/lazy_lexer/: lex.cpp  lex.hpp  token.cpp  token.hpp
src/compiler/parser/: ast.hpp  decl.cpp  expr.cpp  expr.hpp  parser.cpp  parser.hpp  stmt.cpp  stmt.hpp  visit.cpp  visit.hpp
src/compiler/sema_analysis/: sema_visitor.cpp  sema_visitor.hpp  sym.hpp
src/compiler/session/: session.cpp  session.hpp
src/compiler/tac/: ir.hpp  symtab.hpp  type_check.hpp  walk.hpp
src/den/: den.cpp  den.hpp  interface.cpp
src/emitter/: emitter.h
src/lexer/: lexer.cpp  lexer.h  token_kind.cpp
src/std/: std.asm
src/utils/: alias.hpp  common.hpp  env.hpp  file.hpp  str.cpp  str.hpp  strch.cpp  strch.hpp
src/warg_parser/: warg_parser.cpp  warg_parser.h
src/wombat_callback/: callback.cpp  callback.hpp  callback.tpp
src/wombat_cli/: args.cpp  args.hpp  interface.cpp  interface.hpp
src/wombat_common/: common.hpp  wtypes.hpp
src/wombat_compiler/: compiler.cpp  compiler.hpp  session.cpp  session.hpp
src/wombat_compiler/wombat_backend/wombat_readables/: readables.hpp
src/wombat_compiler/wombat_cutil/: cutil.cpp  cutil.hpp
src/wombat_compiler/wombat_lazy_lexer/: lex.cpp  lex.hpp  token.cpp  token.hpp
src/wombat_compiler/wombat_parser/: ast.hpp  expr.cpp  expr.hpp  parser.cpp  parser.hpp  visit.cpp  visit.hpp
src/wombat_errors/: diagnostic.cpp  diagnostic.hpp  emitter.cpp  emitter.hpp
src/wombat_files/: io_file.cpp  io_file.hpp
src/wombat_lexer/: lexer.cpp  lexer.hpp  token.cpp  token.hpp
src/wombat_runtime/: wtypes.hpp
src/wompiler/: wompiler.cpp  wompiler.h
tests/: CMakeLists.txt  ast_test.cpp  expr_test.cpp  parse_test.cpp  test_help.cpp  test_help.hpp
